// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`@cssxjs/babel-plugin-rn-stylename-inline Aliasing css and styl: Aliasing css and styl 1`] = `

import React from 'react'
import { css as myCss, styl as myStyl, observer } from 'cssxjs'

export default observer(function Card () {
  myStyl\`
    .card
      color blue
  \`
  return <View styleName='card' />
})

myCss\`
  .card {
    color: red;
    background-color: green;
  }
\`

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import { css as myCss, styl as myStyl, observer } from "cssxjs";
const __CSS_GLOBAL__ = {
  version: 1,
  id: "cssx_d20fva",
  contentHash: "cssx_9sdtvn",
  rules: [
    {
      selector: ".card",
      classes: ["card"],
      part: null,
      specificity: 1,
      order: 0,
      media: null,
      declarations: [
        {
          property: "color",
          value: "red",
          raw: "color: red",
          order: 0,
          line: 3,
          column: 5,
        },
        {
          property: "background-color",
          value: "green",
          raw: "background-color: green",
          order: 1,
          line: 4,
          column: 5,
        },
      ],
    },
  ],
  keyframes: {},
  metadata: {
    hasVars: false,
    vars: [],
    hasMedia: false,
    hasViewportUnits: false,
    hasInterpolations: false,
    hasDynamicRuntimeDependencies: false,
    hasAnimations: false,
    hasTransitions: false,
  },
  diagnostics: [],
  __hash__: -2145056715,
};
const _localCssInstance = {
  version: 1,
  id: "cssx_6737ah",
  contentHash: "cssx_bj97x3",
  rules: [
    {
      selector: ".card",
      classes: ["card"],
      part: null,
      specificity: 1,
      order: 0,
      media: null,
      declarations: [
        {
          property: "color",
          value: "#00f",
          raw: "color: #00f",
          order: 0,
          line: 2,
          column: 3,
        },
      ],
    },
  ],
  keyframes: {},
  metadata: {
    hasVars: false,
    vars: [],
    hasMedia: false,
    hasViewportUnits: false,
    hasInterpolations: false,
    hasDynamicRuntimeDependencies: false,
    hasAnimations: false,
    hasTransitions: false,
  },
  diagnostics: [],
  __hash__: 1523967940,
};
export default observer(function Card() {
  const __CSS_LOCAL__ = _localCssInstance;
  return <View styleName="card" />;
});


`;

exports[`@cssxjs/babel-plugin-rn-stylename-inline Custom magic import. Simple: Custom magic import. Simple 1`] = `

import React from 'react'
import { css, observer } from 'startupjs'

export default observer(function Card () {
  return <View styleName='card' />
})

css\`
  .card {
    color: red;
    background-color: green;
  }
\`

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import { css, observer } from "startupjs";
const __CSS_GLOBAL__ = {
  version: 1,
  id: "cssx_d20fva",
  contentHash: "cssx_9sdtvn",
  rules: [
    {
      selector: ".card",
      classes: ["card"],
      part: null,
      specificity: 1,
      order: 0,
      media: null,
      declarations: [
        {
          property: "color",
          value: "red",
          raw: "color: red",
          order: 0,
          line: 3,
          column: 5,
        },
        {
          property: "background-color",
          value: "green",
          raw: "background-color: green",
          order: 1,
          line: 4,
          column: 5,
        },
      ],
    },
  ],
  keyframes: {},
  metadata: {
    hasVars: false,
    vars: [],
    hasMedia: false,
    hasViewportUnits: false,
    hasInterpolations: false,
    hasDynamicRuntimeDependencies: false,
    hasAnimations: false,
    hasTransitions: false,
  },
  diagnostics: [],
  __hash__: -2145056715,
};
export default observer(function Card() {
  return <View styleName="card" />;
});


`;

exports[`@cssxjs/babel-plugin-rn-stylename-inline Global and local css and styl. Several components: Global and local css and styl. Several components 1`] = `

import React from 'react'
import { css, styl } from 'cssxjs'
import { View } from 'react-native'

export default function Card () {
  return <View styleName='root active'><Line /></View>

  styl\`
    .root
      padding 8px 16px
  \`
}

function Line () {
  return <View styleName='root' />

  css\`
    .root {
      margin-top: 16px;
      border-radius: 8px;
    }
  \`
}

styl\`
  .active
    background-color red
\`

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import { css, styl } from "cssxjs";
import { View } from "react-native";
const __CSS_GLOBAL__ = {
  version: 1,
  id: "cssx_e4ok3b",
  contentHash: "cssx_sae16k",
  rules: [
    {
      selector: ".active",
      classes: ["active"],
      part: null,
      specificity: 1,
      order: 0,
      media: null,
      declarations: [
        {
          property: "background-color",
          value: "#f00",
          raw: "background-color: #f00",
          order: 0,
          line: 2,
          column: 3,
        },
      ],
    },
  ],
  keyframes: {},
  metadata: {
    hasVars: false,
    vars: [],
    hasMedia: false,
    hasViewportUnits: false,
    hasInterpolations: false,
    hasDynamicRuntimeDependencies: false,
    hasAnimations: false,
    hasTransitions: false,
  },
  diagnostics: [],
  __hash__: 1497110248,
};
const _localCssInstance2 = {
  version: 1,
  id: "cssx_8a2l4b",
  contentHash: "cssx_fubghw",
  rules: [
    {
      selector: ".root",
      classes: ["root"],
      part: null,
      specificity: 1,
      order: 0,
      media: null,
      declarations: [
        {
          property: "margin-top",
          value: "16px",
          raw: "margin-top: 16px",
          order: 0,
          line: 3,
          column: 7,
        },
        {
          property: "border-radius",
          value: "8px",
          raw: "border-radius: 8px",
          order: 1,
          line: 4,
          column: 7,
        },
      ],
    },
  ],
  keyframes: {},
  metadata: {
    hasVars: false,
    vars: [],
    hasMedia: false,
    hasViewportUnits: false,
    hasInterpolations: false,
    hasDynamicRuntimeDependencies: false,
    hasAnimations: false,
    hasTransitions: false,
  },
  diagnostics: [],
  __hash__: 707783542,
};
const _localCssInstance = {
  version: 1,
  id: "cssx_94aplp",
  contentHash: "cssx_j0akch",
  rules: [
    {
      selector: ".root",
      classes: ["root"],
      part: null,
      specificity: 1,
      order: 0,
      media: null,
      declarations: [
        {
          property: "padding",
          value: "8px 16px",
          raw: "padding: 8px 16px",
          order: 0,
          line: 2,
          column: 3,
        },
      ],
    },
  ],
  keyframes: {},
  metadata: {
    hasVars: false,
    vars: [],
    hasMedia: false,
    hasViewportUnits: false,
    hasInterpolations: false,
    hasDynamicRuntimeDependencies: false,
    hasAnimations: false,
    hasTransitions: false,
  },
  diagnostics: [],
  __hash__: -1559627094,
};
export default function Card() {
  const __CSS_LOCAL__ = _localCssInstance;
  return (
    <View styleName="root active">
      <Line />
    </View>
  );
}
function Line() {
  const __CSS_LOCAL__ = _localCssInstance2;
  return <View styleName="root" />;
}


`;

exports[`@cssxjs/babel-plugin-rn-stylename-inline Global and local css. Several components: Global and local css. Several components 1`] = `

import React from 'react'
import { css } from 'cssxjs'
import { View } from 'react-native'

export default function Card () {
  return <View styleName='root active'><Line /></View>

  css\`
    .root {
      padding: 8px 16px;
    }
  \`
}

function Line () {
  return <View styleName='root' />

  css\`
    .root {
      margin-top: 16px;
      border-radius: 8px;
    }
  \`
}

css\`
  .active {
    background-color: red;
  }
\`

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import { css } from "cssxjs";
import { View } from "react-native";
const __CSS_GLOBAL__ = {
  version: 1,
  id: "cssx_fgl1hb",
  contentHash: "cssx_62w8qm",
  rules: [
    {
      selector: ".active",
      classes: ["active"],
      part: null,
      specificity: 1,
      order: 0,
      media: null,
      declarations: [
        {
          property: "background-color",
          value: "red",
          raw: "background-color: red",
          order: 0,
          line: 3,
          column: 5,
        },
      ],
    },
  ],
  keyframes: {},
  metadata: {
    hasVars: false,
    vars: [],
    hasMedia: false,
    hasViewportUnits: false,
    hasInterpolations: false,
    hasDynamicRuntimeDependencies: false,
    hasAnimations: false,
    hasTransitions: false,
  },
  diagnostics: [],
  __hash__: -1215509807,
};
const _localCssInstance2 = {
  version: 1,
  id: "cssx_8a2l4b",
  contentHash: "cssx_fubghw",
  rules: [
    {
      selector: ".root",
      classes: ["root"],
      part: null,
      specificity: 1,
      order: 0,
      media: null,
      declarations: [
        {
          property: "margin-top",
          value: "16px",
          raw: "margin-top: 16px",
          order: 0,
          line: 3,
          column: 7,
        },
        {
          property: "border-radius",
          value: "8px",
          raw: "border-radius: 8px",
          order: 1,
          line: 4,
          column: 7,
        },
      ],
    },
  ],
  keyframes: {},
  metadata: {
    hasVars: false,
    vars: [],
    hasMedia: false,
    hasViewportUnits: false,
    hasInterpolations: false,
    hasDynamicRuntimeDependencies: false,
    hasAnimations: false,
    hasTransitions: false,
  },
  diagnostics: [],
  __hash__: 707783542,
};
const _localCssInstance = {
  version: 1,
  id: "cssx_e3vlw8",
  contentHash: "cssx_7lhxx3",
  rules: [
    {
      selector: ".root",
      classes: ["root"],
      part: null,
      specificity: 1,
      order: 0,
      media: null,
      declarations: [
        {
          property: "padding",
          value: "8px 16px",
          raw: "padding: 8px 16px",
          order: 0,
          line: 3,
          column: 7,
        },
      ],
    },
  ],
  keyframes: {},
  metadata: {
    hasVars: false,
    vars: [],
    hasMedia: false,
    hasViewportUnits: false,
    hasInterpolations: false,
    hasDynamicRuntimeDependencies: false,
    hasAnimations: false,
    hasTransitions: false,
  },
  diagnostics: [],
  __hash__: -202231319,
};
export default function Card() {
  const __CSS_LOCAL__ = _localCssInstance;
  return (
    <View styleName="root active">
      <Line />
    </View>
  );
}
function Line() {
  const __CSS_LOCAL__ = _localCssInstance2;
  return <View styleName="root" />;
}


`;

exports[`@cssxjs/babel-plugin-rn-stylename-inline Global css. Several components: Global css. Several components 1`] = `

import React from 'react'
import { css } from 'cssxjs'
import { View } from 'react-native'

export default function Card () {
  return <View styleName='card active'><Line /></View>
}

function Line () {
  return <View styleName='line' />
}

css\`
  .card {
    padding: 8px 16px;
  }
  .line {
    margin-top: 16px;
    border-radius: 8px;
  }
  .active {
    background-color: red;
  }
\`

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import { css } from "cssxjs";
import { View } from "react-native";
const __CSS_GLOBAL__ = {
  version: 1,
  id: "cssx_5snslk",
  contentHash: "cssx_c10gwr",
  rules: [
    {
      selector: ".card",
      classes: ["card"],
      part: null,
      specificity: 1,
      order: 0,
      media: null,
      declarations: [
        {
          property: "padding",
          value: "8px 16px",
          raw: "padding: 8px 16px",
          order: 0,
          line: 3,
          column: 5,
        },
      ],
    },
    {
      selector: ".line",
      classes: ["line"],
      part: null,
      specificity: 1,
      order: 1,
      media: null,
      declarations: [
        {
          property: "margin-top",
          value: "16px",
          raw: "margin-top: 16px",
          order: 0,
          line: 6,
          column: 5,
        },
        {
          property: "border-radius",
          value: "8px",
          raw: "border-radius: 8px",
          order: 1,
          line: 7,
          column: 5,
        },
      ],
    },
    {
      selector: ".active",
      classes: ["active"],
      part: null,
      specificity: 1,
      order: 2,
      media: null,
      declarations: [
        {
          property: "background-color",
          value: "red",
          raw: "background-color: red",
          order: 0,
          line: 10,
          column: 5,
        },
      ],
    },
  ],
  keyframes: {},
  metadata: {
    hasVars: false,
    vars: [],
    hasMedia: false,
    hasViewportUnits: false,
    hasInterpolations: false,
    hasDynamicRuntimeDependencies: false,
    hasAnimations: false,
    hasTransitions: false,
  },
  diagnostics: [],
  __hash__: -1106277367,
};
export default function Card() {
  return (
    <View styleName="card active">
      <Line />
    </View>
  );
}
function Line() {
  return <View styleName="line" />;
}


`;

exports[`@cssxjs/babel-plugin-rn-stylename-inline Global css. Simple: Global css. Simple 1`] = `

import React from 'react'
import { css, observer } from 'cssxjs'

export default observer(function Card () {
  return <View styleName='card' />
})

css\`
  .card {
    color: red;
    background-color: green;
  }
\`

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import { css, observer } from "cssxjs";
const __CSS_GLOBAL__ = {
  version: 1,
  id: "cssx_d20fva",
  contentHash: "cssx_9sdtvn",
  rules: [
    {
      selector: ".card",
      classes: ["card"],
      part: null,
      specificity: 1,
      order: 0,
      media: null,
      declarations: [
        {
          property: "color",
          value: "red",
          raw: "color: red",
          order: 0,
          line: 3,
          column: 5,
        },
        {
          property: "background-color",
          value: "green",
          raw: "background-color: green",
          order: 1,
          line: 4,
          column: 5,
        },
      ],
    },
  ],
  keyframes: {},
  metadata: {
    hasVars: false,
    vars: [],
    hasMedia: false,
    hasViewportUnits: false,
    hasInterpolations: false,
    hasDynamicRuntimeDependencies: false,
    hasAnimations: false,
    hasTransitions: false,
  },
  diagnostics: [],
  __hash__: -2145056715,
};
export default observer(function Card() {
  return <View styleName="card" />;
});


`;

exports[`@cssxjs/babel-plugin-rn-stylename-inline Global styl. Several components: Global styl. Several components 1`] = `

import React from 'react'
import { styl } from 'cssxjs'
import { View } from 'react-native'

export default function Card () {
  return <View styleName='card active'><Line /></View>
}

function Line () {
  return <View styleName='line' />
}

styl\`
  .card
    padding 8px 16px
  .line
    margin-top 16px
    border-radius 8px
  .active
    background-color red
\`

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import { styl } from "cssxjs";
import { View } from "react-native";
const __CSS_GLOBAL__ = {
  version: 1,
  id: "cssx_ccmade",
  contentHash: "cssx_oj63s5",
  rules: [
    {
      selector: ".card",
      classes: ["card"],
      part: null,
      specificity: 1,
      order: 0,
      media: null,
      declarations: [
        {
          property: "padding",
          value: "8px 16px",
          raw: "padding: 8px 16px",
          order: 0,
          line: 2,
          column: 3,
        },
      ],
    },
    {
      selector: ".line",
      classes: ["line"],
      part: null,
      specificity: 1,
      order: 1,
      media: null,
      declarations: [
        {
          property: "margin-top",
          value: "16px",
          raw: "margin-top: 16px",
          order: 0,
          line: 5,
          column: 3,
        },
        {
          property: "border-radius",
          value: "8px",
          raw: "border-radius: 8px",
          order: 1,
          line: 6,
          column: 3,
        },
      ],
    },
    {
      selector: ".active",
      classes: ["active"],
      part: null,
      specificity: 1,
      order: 2,
      media: null,
      declarations: [
        {
          property: "background-color",
          value: "#f00",
          raw: "background-color: #f00",
          order: 0,
          line: 9,
          column: 3,
        },
      ],
    },
  ],
  keyframes: {},
  metadata: {
    hasVars: false,
    vars: [],
    hasMedia: false,
    hasViewportUnits: false,
    hasInterpolations: false,
    hasDynamicRuntimeDependencies: false,
    hasAnimations: false,
    hasTransitions: false,
  },
  diagnostics: [],
  __hash__: -156895245,
};
export default function Card() {
  return (
    <View styleName="card active">
      <Line />
    </View>
  );
}
function Line() {
  return <View styleName="line" />;
}


`;

exports[`@cssxjs/babel-plugin-rn-stylename-inline Global styl. Simple: Global styl. Simple 1`] = `

import React from 'react'
import { styl, observer } from 'cssxjs'

export default observer(function Card () {
  return <View styleName='card' />
})

styl\`
  .card
    color red
    background-color green
\`

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import { styl, observer } from "cssxjs";
const __CSS_GLOBAL__ = {
  version: 1,
  id: "cssx_5vvl7n",
  contentHash: "cssx_ask4pp",
  rules: [
    {
      selector: ".card",
      classes: ["card"],
      part: null,
      specificity: 1,
      order: 0,
      media: null,
      declarations: [
        {
          property: "color",
          value: "#f00",
          raw: "color: #f00",
          order: 0,
          line: 2,
          column: 3,
        },
        {
          property: "background-color",
          value: "#008000",
          raw: "background-color: #008000",
          order: 1,
          line: 3,
          column: 3,
        },
      ],
    },
  ],
  keyframes: {},
  metadata: {
    hasVars: false,
    vars: [],
    hasMedia: false,
    hasViewportUnits: false,
    hasInterpolations: false,
    hasDynamicRuntimeDependencies: false,
    hasAnimations: false,
    hasTransitions: false,
  },
  diagnostics: [],
  __hash__: 1421483523,
};
export default observer(function Card() {
  return <View styleName="card" />;
});


`;

exports[`@cssxjs/babel-plugin-rn-stylename-inline Local css interpolation: Local css interpolation 1`] = `

import React from 'react'
import { css } from 'cssxjs'
import { View } from 'react-native'
import { useThemeColor } from './theme'

export default function Card ({ pad }) {
  const color = useThemeColor('primary')
  return <View styleName='root' />

  css\`
    .root {
      color: \${color};
      padding: \${pad} 2u;
    }
  \`
}

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import { css } from "cssxjs";
import { View } from "react-native";
import { useThemeColor } from "./theme";
const _localCssInstance = {
  version: 1,
  id: "cssx_fjh55d",
  contentHash: "cssx_4m17p8",
  rules: [
    {
      selector: ".root",
      classes: ["root"],
      part: null,
      specificity: 1,
      order: 0,
      media: null,
      declarations: [
        {
          property: "color",
          value: "var(--__cssx_dynamic_0)",
          raw: "color: var(--__cssx_dynamic_0)",
          order: 0,
          dynamicSlots: [0],
          line: 3,
          column: 7,
        },
        {
          property: "padding",
          value: "var(--__cssx_dynamic_1) 2u",
          raw: "padding: var(--__cssx_dynamic_1) 2u",
          order: 1,
          dynamicSlots: [1],
          line: 4,
          column: 7,
        },
      ],
    },
  ],
  keyframes: {},
  metadata: {
    hasVars: true,
    vars: ["--__cssx_dynamic_0", "--__cssx_dynamic_1"],
    hasMedia: false,
    hasViewportUnits: false,
    hasInterpolations: true,
    hasDynamicRuntimeDependencies: true,
    hasAnimations: false,
    hasTransitions: false,
  },
  diagnostics: [],
  __hash__: -1763352586,
};
export default function Card({ pad }) {
  const color = useThemeColor("primary");
  const __CSS_LOCAL__ = {
    sheet: _localCssInstance,
    values: [color, pad],
  };
  return <View styleName="root" />;
}


`;

exports[`@cssxjs/babel-plugin-rn-stylename-inline Should remove css and styl from cssxjs import: Should remove css and styl from cssxjs import 1`] = `

import React from 'react'
import { css, observer, styl } from 'cssxjs'

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import { css, observer, styl } from "cssxjs";


`;

exports[`@cssxjs/babel-plugin-rn-stylename-inline Should remove the whole lib if no other things are left in cssxjs: Should remove the whole lib if no other things are left in cssxjs 1`] = `

import React from 'react'
import { css, styl } from 'cssxjs'

      ↓ ↓ ↓ ↓ ↓ ↓

import React from "react";
import { css, styl } from "cssxjs";


`;
